[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparse-array-program-suite"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["lrb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
